--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
               text-align: justify;
             }
 
-            #events{
-              float: right;
-            }
+
             #wel-msg{
             text-align: justify;
             }
@@ -124,7 +122,7 @@ Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quick
       <div class="col">
       </div>
       <div class="col">
-        <table>
+        <table border="1">
           <tr>
             <th> Event </th>
             <th> Activity </th>
@@ -153,7 +151,8 @@ Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quick
         <p><a href="#"> Facebook</a></p>
         <p><a href="#"> Twitter</p>
         <p><a href="#">Instagram</p>
-        
+          <p> Copy right 2020 </p>
+
       </footer>
 
 
@@ -189,17 +188,6 @@ Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quick
         <td> 12:00 am </td>
       </tr>
     </table>-->
-
-
-
-
-
-
-
-
-
-
-
 
  </body>
 </html>
