added another line

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quick
         <p><a href="#"> Facebook</a></p>
         <p><a href="#"> Twitter</p>
         <p><a href="#">Instagram</p>
-          <p> Copy right 2020 </p>
+          <p> Copy rights 2020 </p>
 
       </footer>
 
