--- a/index.html
+++ b/index.html
@@ -2,124 +2,99 @@
 <html>
     <head>
         <title>My Webpage</title>
-           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+            <link href="home_stylesheet.css" rel="stylesheet">
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <style>
-            body html {
-              height: 100%;
-            }
 
-            .hero-text {
-              text-align: center;
-              position: absolute;
-              top: 50%;
-              left: 50%;
-              transform: translate(-50%, -50%);
-              color: white;
-            }
-
-            .hero-text button {
-              border: none;
-              outline: 0;
-              display: inline-block;
-              padding: 10px 25px;
-              color: black;
-              background-color: #ddd;
-              text-align: center;
-              cursor: pointer;
-            }
-
-            .hero-text button:hover {
-              background-color: #555;
-              color: white;
-            }
-            #msg {
-              width: 500px;
-              height:300px;
-              background-color: springgreen;
-              margin-left: 30px;
-
-              }
-
-
-            #greet-msg{
-              text-align: justify;
-            }
-
-
-            #wel-msg{
-            text-align: justify;
-            }
-            .grid{
-              background-color: #dae7e8;
-              display: grid;
-              padding: 20px;
-              grid-column-gap: 20px;
-              grid-row-gap: 10px;
-              grid-template-columns: auto auto auto;
-            }
-            .grid-item{
-              background-color:white;
-              font-size: 20px;
-              padding: 20px;
-              text-align: center;
-            }
-            #bottom{
-              background-color:black;
-              padding: 10px;
-            }
-            #s-links{
-              color: white;
-              text-decoration: none;
-
-            }
-
-
-
-          </style>
 
   </head>
-  <body>
-    <div>
+<body>
 
-   <ul class="nav nav-pills justify-content-center">
-  <li class="nav-item">
-    <a class="nav-link active" href="#">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">About</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Location</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Others</a>
-  </li>
-</ul>
-</div>
 
-  <div style="background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('hero-image.jpg'); height:400px; width:100%; background-position:center; background-repeat:no-repeat; background-size:cover; position:relative; top:20px;">
+
+<!--  <div style="background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('hero-image.jpg'); height:100px; width:100%; background-position:center; background-repeat:no-repeat; background-size:cover; position:relative;">
     <div class="hero-text">
-    <h1 style="font-size:50px">I am Ahmed</h1>
-      <p>And I'm a Computer Addicted</p>
-      <button>Click Here</button>
+-->
+
+
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-2">
+      <img class="logo"src="logo.png" alt="logo">
+    </div>
+    <div class="col-md-8  ml-auto">
+      <div class="pill-nav">
+
+      <a href="#">Home</a>
+      <a href="activities.html">Activities</a>
+      <a href="interests.html">Interests</a>
+      <a href="location.html">Locations</a>
+
+    </div>
     </div>
   </div>
-  <hr>
+  <div class="row">
+      <img id="main-img" src="artificial-grass.jpg">
+    </div>
+  </div>
+  <!-- The main Content-->
+<div class="container main-content">
+  <div class="row">
+    <div class="col-lg-6 col-sm-12">
+      <h2> About Us</h2>
+      <p id="about-content">Orbit Engineering Development BV was established in 2013.
+Our main office is in Eindhoven Netherlands in collaboration with Al Ghareem in Najaf (Iraq).
+We are an independent group of professionals who putt their skills to the limit to provide the best possible solution for your engineering problem.  That is why we keep on developing our skills and try implementing the latest technologies in our work. Butt we still keep the main factors like efficiency, cost, duration and quality in mind.
+Our main activities include planning, construction, spatial planning, sport and leisure, landscaping, architecture, engineering and more.
 
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <h3>  Welocme Message </h3>
-        <p id="wel-msg">Build responsive, mobile-first projects on the web with the world’s most popular front-end component library.
+      </div>
+      <div class="col-lg-6 sm-12">
+        <img class="side-image" src="side-image1.jpg">
+        <img class="side-image" src="side-image2.jpg">
 
-Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.
-        </p>
       </div>
-      <div class="col">
-      </div>
-      <div class="col">
-        <table border="1">
+    </div>
+  </div>
+<!--footer is located here-->
+<div class="row footers">
+  <div class="col-12">
+    <p> Copyrights <span id="year">2020</span> -All rights reserved</p>
+
+
+
+
+
+
+<!--  <div class="col-md-3">
+    <ul class="side">
+      <li>Future Works</li>
+      <li>Future Works</li>
+      <li>Future Works</li>
+      <li>Future Works</li>
+    </ul>
+  </div>
+  <div class="col-md-9">HELLO WORLD!</div>
+  </div>
+</div>-->
+
+
+
+<!--  <div class="row">
+    <div class="side">
+      <h2> Here is some text </h2>
+      <img  class="side-image" src="full-duplex.png" alt="full-duplex">
+    </div>
+    <div class="contents">
+    <h1>here is another text </h1>
+    </div>
+  </div>
+
+
+
+      <div class="col1">
+        <h3 id="types"> Types of Networks</h3>
+        <table>
           <tr>
             <th> Event </th>
             <th> Activity </th>
@@ -132,25 +107,80 @@ Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quick
             <td> 20-feb-2020 </td>
             <td> 12:00 am </td>
             </tr>
+            <tr>
+              <td> Geology Lecture </td>
+              <td> Group Discussion</td>
+              <td> 20-feb-2020 </td>
+              <td> 12:00 am </td>
+            </tr>
+              <tr>
+                <td> Geology Lecture </td>
+                <td> Group Discussion</td>
+                <td> 20-feb-2020 </td>
+                <td> 12:00 am </td>
+                </tr>
+                <tr>
+                  <td> Geology Lecture </td>
+                  <td> Group Discussion</td>
+                  <td> 20-feb-2020 </td>
+                  <td> 12:00 am </td>
+                  </tr>
         </table>
         </div>
       </div>
+<hr>
+
+
+
+  <div class="row2">
+
+  <div class="incol">
+    <h1 style="padding-left:20px">Connection Types</h1>
+    <div class="card">
+
+      <img src="full-duplex.png" height="300px">
+      <p>Full-Duplex</p>
     </div>
-    <br>
-      <h1> Latest News </h1>
-    <div class="grid">
-      <div class="grid-item">first article</div>
-      <div class="grid-item">second article</div>
-      <div class="grid-item">third article</div>
+  </div>
+
+  <div class="incol">
+    <div class="card">
+
+      <img src="full-duplex.png" height="300px">
+      <p>Half-Duplex</p>
     </div>
-    <footer id="bottom">
-      <h3 id="s-links">Social links</h3>
-        <p><a href="#"> Facebook</a></p>
+  </div>
+
+  <div class="incol">
+    <div class="card">
+
+      <img src="full-duplex.png" height="300px">
+      <p>Simple Duplex</p>
+    </div>
+  </div>
+</div>
+</div>
+
+
+
+
+<hr>
+<div class="row3">
+  <div id="tail">
+    <h3 id="s-links">Social links:</h3>
+    <ul id="social">
+      <li class="slinks"><a href="#">Facebook</a><li>
+      <li class="slinks"><a href="#">Twitter</a></li>
+      <li class="slinks"><a href="#">Instagram</a></li>
+    </ul>
+  </div>
+
+</div>
+
         <p><a href="#"> Twitter</p>
         <p><a href="#">Instagram</p>
-          <p> Copy rights 2020 </p>
+          <p> Copy rights 2020 </p>-->
 
-      </footer>
 
  </body>
 </html>
