--- a/index.html
+++ b/index.html
@@ -19,47 +19,94 @@
 
 
 <div class="container-fluid">
-  <div class="row">
+  <div class="row menu">
     <div class="col-md-2">
-      <img class="logo"src="logo.png" alt="logo">
+     <img id="logo"src="logo.png" alt="logo">
     </div>
     <div class="col-md-8  ml-auto">
       <div class="pill-nav">
-
-      <a href="#">Home</a>
-      <a href="activities.html">Activities</a>
-      <a href="interests.html">Interests</a>
-      <a href="location.html">Locations</a>
-
-    </div>
+        <a href="#">Home</a>
+        <a href="activities.html">Sumerians</a>
+        <a href="interests.html">Old Babylon</a>
+        <a href="location.html">Assyria</a>
+      </div>
     </div>
   </div>
   <div class="row">
-      <img id="main-img" src="artificial-grass.jpg">
+      <img id="main-img" src="main-image.jpg">
     </div>
-  </div>
+</div>
   <!-- The main Content-->
 <div class="container main-content">
   <div class="row">
     <div class="col-lg-6 col-sm-12">
-      <h2> About Us</h2>
-      <p id="about-content">Orbit Engineering Development BV was established in 2013.
-Our main office is in Eindhoven Netherlands in collaboration with Al Ghareem in Najaf (Iraq).
-We are an independent group of professionals who putt their skills to the limit to provide the best possible solution for your engineering problem.  That is why we keep on developing our skills and try implementing the latest technologies in our work. Butt we still keep the main factors like efficiency, cost, duration and quality in mind.
-Our main activities include planning, construction, spatial planning, sport and leisure, landscaping, architecture, engineering and more.
+      <h2> Introduction</h2>
+      <p id="about-content">In the narrow sense, Mesopotamia is the area between the
+Euphrates and Tigris rivers, north or northwest of the bottleneck
+at Baghdad, in modern Iraq; it is Al-Jazīrah (“The
+Island”) of the Arabs. South of this lies Babylonia, named
+after the city of Babylon. However, in the broader sense, the
+name "Mesopotamia" has come to be used for the area
+bounded on the northeast by the Zagros Mountains and on
+the southwest by the edge of the Arabian Plateau and stretching
+from the Persian Gulf in the southeast to the spurs of the Anti-Taurus Mountains in the northwest.
+Only from the latitude of Baghdad do the
+Euphrates and Tigris truly become twin
+rivers, the rāfidān of the Arabs, which
+have constantly changed their courses
+over the millennia. The low-lying plain of
+the Kārūn River in Persia has always been
+closely related to Mesopotamia, but it is
+not considered part of Mesopotamia as it
+forms its own river system.
+Mesopotamia, south of Al-Ramādī
+(about 70 miles, or 110 kilometres, west of
+Baghdad) on the Euphrates and the bend
+of the Tigris below Sāmarrā’ (about 70
+miles north-northwest of Baghdad), is flat
+alluvial land. Between Baghdad and the
+mouth of the Shat·
+t·
+al-‘Arab (the confluence
+of the Tigris and Euphrates, where it
+empties into the Persian Gulf) there is a
+difference in height of only about 100
+feet (30 metres). As a result of the slow
+flow of the water, there are heavy deposits
+of silt, and the riverbeds are raised.
+Consequently, the rivers often overflow
+their banks (and may even change their
+course) when they are not protected by
+high dikes. In recent times they have
+been regulated above Baghdad by the
+use of escape channels with overflow reservoirs.
+The extreme south is a region of
+extensive marshes and reed swamps,
+hawrs, which, probably since early times,
+have served as an area of refuge for
+oppressed and displaced peoples.
 
       </div>
       <div class="col-lg-6 sm-12">
-        <img class="side-image" src="side-image1.jpg">
-        <img class="side-image" src="side-image2.jpg">
+        <img class="side-image" src="side1.jpg">
+        <img class="side-image" src="side2.jpg">
 
       </div>
     </div>
   </div>
 <!--footer is located here-->
 <div class="row footers">
-  <div class="col-12">
+  <div class="col-4 Copyrights" >
     <p> Copyrights <span id="year">2020</span> -All rights reserved</p>
+  </div>
+  <div class="col-4 ml-auto">
+    <ul>
+      <li><a href="#Home">Home</li>
+      <li><a href="#Sumerians"> Sumerians</li>
+      <li><a href="#Old Babylon">Old Babylon</li>
+      <li><a href="#Assyria">Assyria</li>
+    </ul>
+</div>
 
 
 
