--- a/index.html
+++ b/index.html
@@ -9,26 +9,17 @@
 
   </head>
 <body>
-
-
-
-<!--  <div style="background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('hero-image.jpg'); height:100px; width:100%; background-position:center; background-repeat:no-repeat; background-size:cover; position:relative;">
-    <div class="hero-text">
--->
-
-
-
-<div class="container-fluid">
-  <div class="row menu">
-    <div class="col-md-2">
-     <img id="logo"src="logo.png" alt="logo">
-    </div>
+  <div class="container-fluid">
+    <div class="row menu">
+      <div class="col-md-2">
+        <img id="logo"src="logo.png" alt="logo">
+      </div>
     <div class="col-md-8  ml-auto">
       <div class="pill-nav">
-        <a href="#">Home</a>
-        <a href="activities.html">Sumerians</a>
-        <a href="interests.html">Old Babylon</a>
-        <a href="location.html">Assyria</a>
+        <a href="index.html">Home</a>
+        <a href="Sumerians.html">Sumerians</a>
+        <a href="Old Babylon.html">Old Babylon</a>
+        <a href="Assyria.html">Assyria</a>
       </div>
     </div>
   </div>
@@ -94,6 +85,28 @@ oppressed and displaced peoples.
       </div>
     </div>
   </div>
+  <!--Table content-->
+<div class="comparisontable">
+  <table id="compare">
+    <tr>
+      <th>civilization</th>
+      <th>Period</th>
+    </tr>
+    <tr>
+      <td>Sumerians</td>
+      <td>5000 BCE to 1750 BCE</td>
+    </tr>
+    <tr>
+      <td>Old_Babylon</td>
+      <td>2000 BCE to 1600 BCE</td>
+    </tr>
+    <tr>
+      <td>Assyria</td>
+      <td> 24th BCE to the 22nd BCE</td>
+    </tr>
+  </table>
+
+</div>
 <!--footer is located here-->
 <div class="row footers">
   <div class="col-4 Copyrights" >
@@ -108,126 +121,5 @@ oppressed and displaced peoples.
     </ul>
 </div>
 
-
-
-
-
-
-<!--  <div class="col-md-3">
-    <ul class="side">
-      <li>Future Works</li>
-      <li>Future Works</li>
-      <li>Future Works</li>
-      <li>Future Works</li>
-    </ul>
-  </div>
-  <div class="col-md-9">HELLO WORLD!</div>
-  </div>
-</div>-->
-
-
-
-<!--  <div class="row">
-    <div class="side">
-      <h2> Here is some text </h2>
-      <img  class="side-image" src="full-duplex.png" alt="full-duplex">
-    </div>
-    <div class="contents">
-    <h1>here is another text </h1>
-    </div>
-  </div>
-
-
-
-      <div class="col1">
-        <h3 id="types"> Types of Networks</h3>
-        <table>
-          <tr>
-            <th> Event </th>
-            <th> Activity </th>
-            <th> Date </th>
-            <th> Time </th>
-          </tr>
-          <tr>
-            <td> Geology Lecture </td>
-            <td> Group Discussion</td>
-            <td> 20-feb-2020 </td>
-            <td> 12:00 am </td>
-            </tr>
-            <tr>
-              <td> Geology Lecture </td>
-              <td> Group Discussion</td>
-              <td> 20-feb-2020 </td>
-              <td> 12:00 am </td>
-            </tr>
-              <tr>
-                <td> Geology Lecture </td>
-                <td> Group Discussion</td>
-                <td> 20-feb-2020 </td>
-                <td> 12:00 am </td>
-                </tr>
-                <tr>
-                  <td> Geology Lecture </td>
-                  <td> Group Discussion</td>
-                  <td> 20-feb-2020 </td>
-                  <td> 12:00 am </td>
-                  </tr>
-        </table>
-        </div>
-      </div>
-<hr>
-
-
-
-  <div class="row2">
-
-  <div class="incol">
-    <h1 style="padding-left:20px">Connection Types</h1>
-    <div class="card">
-
-      <img src="full-duplex.png" height="300px">
-      <p>Full-Duplex</p>
-    </div>
-  </div>
-
-  <div class="incol">
-    <div class="card">
-
-      <img src="full-duplex.png" height="300px">
-      <p>Half-Duplex</p>
-    </div>
-  </div>
-
-  <div class="incol">
-    <div class="card">
-
-      <img src="full-duplex.png" height="300px">
-      <p>Simple Duplex</p>
-    </div>
-  </div>
-</div>
-</div>
-
-
-
-
-<hr>
-<div class="row3">
-  <div id="tail">
-    <h3 id="s-links">Social links:</h3>
-    <ul id="social">
-      <li class="slinks"><a href="#">Facebook</a><li>
-      <li class="slinks"><a href="#">Twitter</a></li>
-      <li class="slinks"><a href="#">Instagram</a></li>
-    </ul>
-  </div>
-
-</div>
-
-        <p><a href="#"> Twitter</p>
-        <p><a href="#">Instagram</p>
-          <p> Copy rights 2020 </p>-->
-
-
- </body>
+</body>
 </html>
