--- a/sumerians.html
+++ b/sumerians.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Locations</title>
+    <title>Sumerians</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--  <link href="home_stylesheet.css" rel="stylesheet"> -->
-      <link href="locations_style.css" rel="stylesheet">
+      <link href="sumer_style.css" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -42,16 +42,15 @@
 <div class="menucontainer" style="border:1px solid black" >
   <div class="row1">
     <div class="menu">
-      <a href="#Home">Home</a>
-      <a href="#Activities">Sumerians</a>
-      <a href="Interests">Old Babylon</a>
-      <a href="#Location">Assyria</a>
+      <a href="index.html">Home</a>
+      <a href="Sumerians.html">Sumerians</a>
+      <a href="Old Babylon.html">Old Babylon</a>
+      <a href="Assyria.html">Assyria</a>
     </div>
     <div class="bodycontent">
-      <div class="image">
+
         <img  id="side" src="sumer.jpg" alt="side-image3">
-        <img  id="side" src="sumer2.jpg" alt="side-image3">
-      </div>
+      
       <!--<img  id="side" src="sumer.jpg" alt="side-image3">
       <img  id="side" src="sumer2.jpg" alt="side-image3">-->
       <p>The earliest known civilization was that of Sumer, located
@@ -59,6 +58,7 @@ in the southernmost part of Mesopotamia between the
 Tigris and the Euphrates rivers, in the area that later became
 Babylonia and is now southern Iraq covering the region
 roughly from Baghdad to the Persian Gulf.</p>
+
       <p>Sumer was fi rst settled between 4500 and 4000 BC by a
 non-Semitic people who did not speak the Sumerian language.
 These people now are called proto-Euphrateans or
@@ -71,7 +71,26 @@ Ubaidian immigration to Mesopotamia, various Semitic
 peoples infi ltrated their territory, adding their cultures to
 the Ubaidian culture, and creating a high pre-Sumerian
 civilization.</p>
+<img  id="side2" src="sumer2.jpg" alt="side-image3">
       <p>The people called Sumerians, whose language became
+the prevailing language of the territory, probably came from
+around Anatolia, arriving in Sumer about 3300 BC . By the
+third millennium BC the country was the site of at least 12
+separate city-states: Kish, Erech (Uruk), Ur, Sippar, Akshak,
+Larak, Nippur, Adab, Umma, Lagash, Bad-tibira, and Larsa.
+Each of these states was comprised of a walled city and its
+surrounding villages and land, and each worshiped its own
+deity, whose temple was the central structure of the city. </p>
+<p>The people called Sumerians, whose language became
+the prevailing language of the territory, probably came from
+around Anatolia, arriving in Sumer about 3300 BC . By the
+third millennium BC the country was the site of at least 12
+separate city-states: Kish, Erech (Uruk), Ur, Sippar, Akshak,
+Larak, Nippur, Adab, Umma, Lagash, Bad-tibira, and Larsa.
+Each of these states was comprised of a walled city and its
+surrounding villages and land, and each worshiped its own
+deity, whose temple was the central structure of the city. </p>
+<p>The people called Sumerians, whose language became
 the prevailing language of the territory, probably came from
 around Anatolia, arriving in Sumer about 3300 BC . By the
 third millennium BC the country was the site of at least 12
