--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container-fluid">
     <div class="row menu">
       <div class="col-md-2">
-        <img id="logo"src="logo.png" alt="logo">
+        <img id="logo"src="logo.PNG" alt="logo">
       </div>
     <div class="col-md-8  ml-auto">
       <div class="pill-nav">
