--- a/Assyria.html
+++ b/Assyria.html
@@ -29,7 +29,7 @@
     <div class="menu">
       <a href="index.html">Home</a>
       <a href="Sumerians.html">Sumerians</a>
-      <a href="Old Babylon.html">Old Babylon</a>
+      <a href="Old_Babylon.html">Old Babylon</a>
       <a href="Assyria.html">Assyria</a>
     </div>
     <div class="bodycontent">
