--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="pill-nav">
         <a href="index.html">Home</a>
         <a href="Sumerians.html">Sumerians</a>
-        <a href="Old Babylon.html">Old Babylon</a>
+        <a href="Old_Babylon.html">Old Babylon</a>
         <a href="Assyria.html">Assyria</a>
       </div>
     </div>
